Remove Deprecation Warnings
- Address usage of new Integer
- Address missing deprecation markers

Closes gh-793